# warranty-claim-audit

./: .env.example  .gitignore  docker-compose.yml
docs/: warranty_claim_audit_system_plan.md
ml/: pyproject.toml
ml/synthetic_data/: generator.py  validator.py
ml/synthetic_data/templates/: claim_templates.py  dtc_database.py  labor_database.py  parts_database.py  vehicle_database.py
ml/training/: feature_engineering.py  train_xgboost.py
scripts/: generate_synthetic_data.py  load_vectors.py
services/api/: Dockerfile  pyproject.toml
services/api/src/: config.py  main.py
services/api/src/models/: __init__.py  claim.py  components.py  pii.py  scoring.py
services/api/src/routers/: scoring.py
services/api/src/services/: decomposer.py  embedder.py  fusion.py  ml_scorer.py  pii_redactor.py  vector_scorer.py
services/web-ui/: app.js  index.html  style.css
