[project]
name = "warranty-claim-audit-ml"
version = "0.1.0"
description = "ML training and synthetic data generation for warranty claim audit"
requires-python = ">=3.12"
dependencies = [
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.3.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "jupyter>=1.1.0",
]
