[project]
name = "warranty-claim-audit-api"
version = "0.1.0"
description = "Warranty claim audit scoring API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.3.0",
    "qdrant-client>=1.12.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
    "joblib>=1.4.0",
    "numpy>=2.0.0",
]
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.8.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
